--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -27,6 +27,6 @@
     "koa": "2.3.0",
     "koa-mount": "3.0.0",
     "koa-router": "7.2.1",
-    "resource-providers": "git://github.com/harin76/resource-providers.git#v0.1.0"
+    "resource-provider": "git://github.com/harin76/resource-provider.git#v0.1.0"
   }
 }
